ChatApp messaging works with myself

--- a/src/main/resources/templates/enter.html
+++ b/src/main/resources/templates/enter.html
@@ -8,9 +8,10 @@
 <h1>Enter</h1>
 
 <form action="/saveUser" method="post">
-  <input name="userName"/>
+  <input name="userName" placeholder="Enter a username"/>
   <br /> <button type="submit" value="Submit" th:text="'Choose your name'"></button>
 </form>
+
 
 </body>
 </html>
