--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8" />
   <title>Chat App</title>
 </head>
 <body>
 <h1> Peer to Peer Chat Program</h1>
+
+<form action="/updateUser" th:object="${user}" method="post">
+  <input th:type="hidden" th:field="*{id}" />
+  <input  type="text" th:field="*{userName}" th:placeholder="*{userName}"/>
+  <br /> <button type="submit" th:text="'Update your username'"></button>
+</form>
+
+<div>
+  <ul>
+      <li>App</li>
+      <span>Hi there! Submit your message using the send button!</span>
+  </ul>
+</div>
+
+<div>
+  <ul th:each="message : ${messages}">
+    <li th:text="${message.userName}"></li>
+    <span th:text="${message.text}"></span>
+  </ul>
+</div>
+
+<form action="/saveMessage" method="post">
+  <textarea th:value="*{text}" name="text"></textarea>
+  <br /> <button type="submit" value="submit">Send</button>
+</form>
+
+
 </body>
 </html>
