ChatApp now can get a mesage from JSON

--- a/src/main/resources/templates/enter.html
+++ b/src/main/resources/templates/enter.html
@@ -8,7 +8,7 @@
 <h1>Enter</h1>
 
 <form action="/saveUser" method="post">
-  <input name="userName" placeholder="Enter a username"/>
+  <input name="username" placeholder="Enter a username"/>
   <br /> <button type="submit" value="Submit" th:text="'Choose your name'"></button>
 </form>
 
